添加日志管理模块